--- a/html/components/settings-tab/index.html
+++ b/html/components/settings-tab/index.html
@@ -40,7 +40,7 @@
           <td colspan="2" class="StatsFile" sbClass="Readable: BlankStatsbookFound | Progress: BlanStatsbookFound: === 'checking'">
             <label>Blank Statsbook File: </label>
             <input type="text" size="40" sbControl="$.Stats.InputFile" />
-            <div class="spinner" sbClass="Hide: BlankStatsbookFound: !== 'checking'"></div>
+            <div class="sbSpinner" sbClass="sbHide: BlankStatsbookFound: !== 'checking'"></div>
           </td>
         </tr>
         <tr>
