--- a/html/components/sheets-tab/index.html
+++ b/html/components/sheets-tab/index.html
@@ -15,8 +15,8 @@
   </select>
 </div>
 
-<div sbForeach="Team: 1,2: only" context="sheet">
-  <div sbInclude="/components/sk-sheet/" class="Sheet SKS Hide"></div>
-  <div sbInclude="/components/plt-input/" class="Sheet PTS Hide"></div>
-  <div sbInclude="/components/lt-sheet/" class="Sheet LTS Hide"></div>
+<div sbForeach="Team: 1,2: only" sbSheetStyle="sheet">
+  <div sbInclude="/components/sk-sheet/" class="Sheet SKS sbHide"></div>
+  <div sbInclude="/components/plt-input/" class="Sheet PTS sbHide"></div>
+  <div sbInclude="/components/lt-sheet/" class="Sheet LTS sbHide"></div>
 </div>
