--- a/html/views/overlay/admin/index.html
+++ b/html/views/overlay/admin/index.html
@@ -36,7 +36,7 @@
 
 			<button id="PanelSet" sbSet="$.Panel: getNextPanel" class="ToggleSwitch Reverse"> </button>
 
-			<div id="LowerThirdControls" class="Hide">
+			<div id="LowerThirdControls" class="sbHide">
 				<h2>Lower Third</h2>
 				<div class="in">
 					<label>Line 1/Line 2/Style</label>
