--- a/html/views/standard/index.html
+++ b/html/views/standard/index.html
@@ -125,7 +125,7 @@
       </div>
     </div>
 
-    <div id="Templates">
+    <div id="sbTemplates">
       <div id="Banners" sbContext="ScoreBoard.Media.Format(images).Type(sponsor_banner)">
         <div sbForeach="File" sbAttr="src: Src"></div>
       </div>
