--- a/html/views/wb/index.html
+++ b/html/views/wb/index.html
@@ -11,7 +11,7 @@
       sbForeach="Team: 1,2: only"
       sbContext="ScoreBoard.CurrentGame"
       sbInclude="/components/plt-input/"
-      context="whiteboard"
+      sbSheetStyle="whiteboard"
       style="width: 50%; float: left"
     ></div>
   </body>
