--- a/html/components/plt-input/index.css
+++ b/html/components/plt-input/index.css
@@ -12,7 +12,7 @@ body:not(.AllowSelect) .PLT {user-select: none;-webkit-user-select: none;-khtml-
 .PLT.Team #StarPass { background-color: #cee7ff; font-weight: normal; } 
 
 /* Similarly for the IWB view and the scoreboard. */
-[context="whiteboard"] .PLT.Team thead td { background-color: #000; color: #FFF; } 
+[sbSheetStyle="whiteboard"] .PLT.Team thead td { background-color: #000; color: #FFF; } 
 
 .PLT.Team td { text-align: center; vertical-align: middle; } 
 .PLT.Team .Number, .PLT.Team .Box, .PLT.Team .Total { width: 5%; border-top: none; border-right:none; } 
