--- a/html/components/ruleset-tab/index.html
+++ b/html/components/ruleset-tab/index.html
@@ -1,6 +1,6 @@
 <div class="definitions" sbPrefix="§:[*]">
   <div class="buttons top"></div>
-  <div class="selection" sbClass="Hide:-:noGame">
+  <div class="selection" sbClass="sbHide:-:noGame">
     <span>Current Ruleset: </span>
     <select id="select" sbProp="disabled: State: !== 'Prepared'" sbControl="Ruleset: updateActiveRs">
       <option value="">Custom</option>
@@ -12,7 +12,7 @@
       ></option>
     </select>
   </div>
-  <div class="metadata" sbClass="Hide:-:isGame">
+  <div class="metadata" sbClass="sbHide:-:isGame">
     <span>Name: </span><input type="text" id="name" size="20" sbProp="disabled: §.Readonly" sbControl="§.Name" /> <span> Parent: </span
     ><select id="parent" sbProp="disabled: §.Readonly" sbControl="§.Parent">
       <option
@@ -46,13 +46,13 @@
           <input
             type="text"
             class="override"
-            sbClass="Hide: Type: === 'Boolean'"
+            sbClass="sbHide: Type: === 'Boolean'"
             sbProp="disabled: §.Readonly, §.Ruleset: disableSetter"
             sbControl="§.Rule([RuleDefinition])"
           />
           <select
             class="override"
-            sbClass="Hide: Type: !== 'Boolean'"
+            sbClass="sbHide: Type: !== 'Boolean'"
             sbProp="disabled: §.Readonly, §.Ruleset: disableSetter"
             sbControl="§.Rule([RuleDefinition])"
           >
