--- a/html/components/sk-sheet/index.css
+++ b/html/components/sk-sheet/index.css
@@ -1,49 +1,50 @@
-.SK, #TripEditor { font-size: 11pt; } 
-table.SK, .SK td, #TripEditor table, #TripEditor tr, #TripEditor td { border-collapse: collapse; border-color:#777; } 
-body:not(.AllowSelect) .SK { user-select: none; -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -o-user-select: none; } 
-.SK tr { color: #333; } 
-.SK.Period tr.Edit .EditButton .ui-button { background: #3f3; }
-.SK.Period tr.Edits:not(.Edit) { display: none; }
-.SK.Period tr:not(.Edit) .EditOnly { display: none; }
-.SK.Period tr.IgnoreEdit .EditOnly { display: none; }
-.SK.Period tr.Edit .NoEditOnly { display: none; }
-.SK.Period td:not(.Used) > .UsedOnly { display: none; }
-.SK.Period td:not(.OtherUsed) > .OtherUsedOnly { display: none; }
-.SK.Period td.Used > .FirstUnusedOnly { display: none; }
-.SK.Period td.OtherUsed > .FirstUnusedOnly { display: none; }
-.SK.Period td:not(.Used) + td > .FirstUnusedOnly { display: none; }
-.SK.Period tr.HasSP .AddSP { display: none; }
-.SK.Period tr:not(.HasSP) .InitialSP { display: none; }
-.SK.Period tr:not(.IsOR) .OROnly { display:none; }
-.SK.Period { width: 98%; table-layout:fixed; margin: 0.5em 1%; } 
-.SK.Period thead td { font-size: 85%; background-color: #cccccc; color: #333333; } 
-.SK.Period .SmallHead>div { font-size: 75%; transform: rotate(270deg) translate(-50%); } 
-.SK.Period td { text-align: center; vertical-align: middle; } 
-.SK.Period tr { background-color: #FFF; height: 31px; } 
-.SK.Period tr.Darker { background-color: #e9f6da; } 
-.SK.Period tr.Timeout { background-color: #e0d0f0; height: 31px; } 
-.SK.Period tr.Timeout.Darker { background-color: #e0d0f0; } 
-.SK.Period tr .Darker { background-color: #e9f6da; } 
-.SK.Period tr.Darker .Darker { background-color: #d3ecb6; } 
-[context]:not([context="sheet"]) .SK.Period tr.SP td { border-bottom-style: dotted; } 
-[context="sheet"] .SK.Period tr.SP td { border-top-style: dotted; } 
-[context="sheet"] .SK.Period tr.Edits:not(.Before) td { border-top-style: dotted; } 
-[context]:not([context="sheet"]) .SK.Period tr.Edits:not(.Before) td { border-bottom-style: dotted; } 
-[context="sheet"] .SK.Period tr.Edits.Before td { border-bottom-style: dotted; } 
-[context]:not([context="sheet"]) .SK.Period tr.Edits.Before td { border-top-style: dotted; } 
-.SK.Period .EditButton { width: 30px; background-color: #FFF; }
-.SK.Period .EditButton .ui-button { padding: .4em; }
-.SK.Period .JamNumber { width: 30px; } 
-.SK.Period .Overtime .JamNumber::after { font-size: 50%; content: "OT"; vertical-align: top; padding-left: 1px; } 
-.SK.Period .Jammer { width: 50px; } 
-.SK.Period .Jammer>span { width: 100%; height: 100%; } 
-.SK.Period .Narrow, .Period .SmallHead { width: 14px; } 
-.SK.Period #head { font-size: calc(200% - 1px); } 
-.SK.Period .Trip, .Period .JamTotal, .Period .GameTotal { width: 9%; } 
-.SK.Period .GameTotal, .SK.Period .JamTotal,.SK.Period .Lost, .SK.Period .Trip2 { border-left-width: 2px; } 
-.SK.Period tr .GameTotal { background-color: #d3ecb6; } 
-.SK.Period .hasAnnotation { position: relative; } 
-.SK.Period .hasAnnotation::after { position: absolute; right: 2px; top: 2px; height: 5px; width: 5px; background-color: red; content: ""; } 
+.SkSheet, #TripEditor { font-size: 11pt; } 
+.SkSheet { flex-wrap: wrap; gap: 1em; }
+.SkSheet>.Period { width: calc(100% - 12px); table-layout:fixed; margin: auto; } 
+.SkSheet>table.Period, .SkSheet td, #TripEditor table, #TripEditor tr, #TripEditor td { border-collapse: collapse; border-color:#777; } 
+body:not(.AllowSelect) .SkSheet { user-select: none; -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -o-user-select: none; } 
+.SkSheet tr { color: #333; } 
+.SkSheet>.Period tr.Edit .EditButton .ui-button { background: #3f3; }
+.SkSheet>.Period tr.Edits:not(.Edit) { display: none; }
+.SkSheet>.Period tr:not(.Edit) .EditOnly { display: none; }
+.SkSheet>.Period tr.IgnoreEdit .EditOnly { display: none; }
+.SkSheet>.Period tr.Edit .NoEditOnly { display: none; }
+.SkSheet>.Period td:not(.Used) > .UsedOnly { display: none; }
+.SkSheet>.Period td:not(.OtherUsed) > .OtherUsedOnly { display: none; }
+.SkSheet>.Period td.Used > .FirstUnusedOnly { display: none; }
+.SkSheet>.Period td.OtherUsed > .FirstUnusedOnly { display: none; }
+.SkSheet>.Period td:not(.Used) + td > .FirstUnusedOnly { display: none; }
+.SkSheet>.Period tr.HasSP .AddSP { display: none; }
+.SkSheet>.Period tr:not(.HasSP) .InitialSP { display: none; }
+.SkSheet>.Period tr:not(.IsOR) .OROnly { display:none; }
+.SkSheet>.Period thead td { font-size: 85%; background-color: #cccccc; color: #333333; } 
+.SkSheet>.Period .SmallHead>div { font-size: 75%; transform: rotate(270deg) translate(-50%); } 
+.SkSheet>.Period td { text-align: center; vertical-align: middle; } 
+.SkSheet>.Period tr { background-color: #FFF; height: 31px; } 
+.SkSheet>.Period tr.Darker { background-color: #e9f6da; } 
+.SkSheet>.Period tr.Timeout { background-color: #e0d0f0; height: 31px; } 
+.SkSheet>.Period tr.Timeout.Darker { background-color: #e0d0f0; } 
+.SkSheet>.Period tr .Darker { background-color: #e9f6da; } 
+.SkSheet>.Period tr.Darker .Darker { background-color: #d3ecb6; } 
+[sbSheetStyle]:not([sbSheetStyle="sheet"]) .SkSheet>.Period tr.SP td { border-bottom-style: dotted; } 
+[sbSheetStyle="sheet"] .SkSheet>.Period tr.SP td { border-top-style: dotted; } 
+[sbSheetStyle="sheet"] .SkSheet>.Period tr.Edits:not(.Before) td { border-top-style: dotted; } 
+[sbSheetStyle]:not([sbSheetStyle="sheet"]) .SkSheet>.Period tr.Edits:not(.Before) td { border-bottom-style: dotted; } 
+[sbSheetStyle="sheet"] .SkSheet>.Period tr.Edits.Before td { border-bottom-style: dotted; } 
+[sbSheetStyle]:not([sbSheetStyle="sheet"]) .SkSheet>.Period tr.Edits.Before td { border-top-style: dotted; } 
+.SkSheet>.Period .EditButton { width: 30px; background-color: #FFF; }
+.SkSheet>.Period .EditButton .ui-button { padding: .4em; }
+.SkSheet>.Period .JamNumber { width: 30px; } 
+.SkSheet>.Period .Overtime .JamNumber::after { font-size: 50%; content: "OT"; vertical-align: top; padding-left: 1px; } 
+.SkSheet>.Period .Jammer { width: 50px; } 
+.SkSheet>.Period .Jammer>span { width: 100%; height: 100%; } 
+.SkSheet>.Period .Narrow, .Period .SmallHead { width: 14px; } 
+.SkSheet>.Period #head { font-size: calc(200% - 1px); } 
+.SkSheet>.Period .Trip, .Period .JamTotal, .Period .GameTotal { width: 9%; } 
+.SkSheet>.Period .GameTotal, .SkSheet>.Period .JamTotal,.SkSheet>.Period .Lost, .SkSheet>.Period .Trip2 { border-left-width: 2px; } 
+.SkSheet>.Period tr .GameTotal { background-color: #d3ecb6; } 
+.SkSheet>.Period .hasAnnotation { position: relative; } 
+.SkSheet>.Period .hasAnnotation::after { position: absolute; right: 2px; top: 2px; height: 5px; width: 5px; background-color: red; content: ""; } 
 
 #TripEditor input[type="number"] { width: 50px; } 
 #TripEditor table { width: 100%; } 
