--- a/html/nso/sbo/index.css
+++ b/html/nso/sbo/index.css
@@ -1,7 +1,7 @@
 body { margin: 0px; } 
 #operatorIdDiv { width: 100%; text-align: center; } 
 #operatorId { font-weight: bold; } 
-#indexLink { position: absolute; top: 2px; right: 2px; } 
+#sbIndexLink { position: absolute; top: 2px; right: 2px; } 
 #helpLink { float: left; }
 #tabsDiv>div.TabContent { padding: 2px; overflow: hidden; } 
 #tabsDiv>div.TabContent>table { width: 100%; border-spacing: 0px; } 
